--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -14,3 +14,7 @@ body { padding: 0; margin: 0 }
 #unity-build-title { float: right; margin-right: 10px; line-height: 38px; font-family: arial; font-size: 18px }
 #unity-fullscreen-button { float: right; width: 38px; height: 38px; background: url('fullscreen-button.png') no-repeat center }
 #unity-warning { position: absolute; left: 50%; top: 5%; transform: translate(-50%); background: white; padding: 10px; display: none }
+#gender { position: relative }
+.unity-mobile #gender { display: none }
+#toky { float: left; width: 64px; height: 64px; background: url('m_t001.png') no-repeat center }
+#zemi { float: left; width: 64px; height: 64px; margin-left: 10px; background: url('f_t001.png') no-repeat center }
